--- a/index.html
+++ b/index.html
@@ -66,7 +66,7 @@
             <div id="ide"></div>
         </section>
         <section>
-            <h2>Elemek elérése 3</h2>
+            <h2 id="f3">Elemek elérése 3</h2>
             <p>
                 Írj JavaScript kódot, amely az ".ide" azonosítóval ellátott
                 elembe beletesz egy p taget, és a p tag tartalma "Jó
@@ -92,7 +92,7 @@
             <div class="ide"></div>
         </section>
         <section>
-            <h2>Elemek elérése 4</h2>
+            <h2 id="f4">Elemek elérése 4</h2>
             <p>
                 Írj JavaScript kódot, amely a "lista" azonosítóval ellátott
                 elembe beletesz felsorolást a felsorolás tartalma 10 és 30
@@ -103,7 +103,7 @@
                 <li>
                     Véletlen szám generálása:
                     <span>
-                        Math.random() - [0,1) között generál számokat.
+                        Math.random() - [0,1] között generál számokat.
                         <br />
                         Math.floor() - levágja a tört részt.
                     </span>
